added a bunch of stuff

--- a/index.yaml
+++ b/index.yaml
@@ -52,6 +52,11 @@ indexes:
   properties:
   - name: userid
   - name: when
+
+- kind: MealModel
+  properties:
+  - name: userid
+  - name: when
     direction: desc
 
 - kind: SelfMessageModel
