--- a/app.yaml
+++ b/app.yaml
@@ -5,6 +5,10 @@ api_version: 1
 threadsafe: true
 
 handlers:
+- url: /favicon\.ico
+  static_files: favicon.ico
+  upload: favicon\.ico
+
 - url: /stylesheets
   static_dir: stylesheets
   
