batch meal submission

--- a/index.yaml
+++ b/index.yaml
@@ -74,6 +74,13 @@ indexes:
   - name: when
     direction: desc
 
+- kind: ImageModel
+  properties:
+  - name: category
+  - name: userid
+  - name: uploaded
+    direction: desc
+
 - kind: MealModel
   properties:
   - name: userid
