some page template tweaks, config string

--- a/app.yaml
+++ b/app.yaml
@@ -19,6 +19,10 @@ handlers:
 - url: /signup/?
   script: main.app
   secure: always
+  
+- url: /panel/?
+  script: main.app
+  secure: always
     
 - url: /.*
   script: main.app
