began adding blogging function

--- a/index.yaml
+++ b/index.yaml
@@ -30,6 +30,11 @@ indexes:
   - name: when
     direction: desc
 
+- kind: BlogPostModel
+  properties:
+  - name: userid
+  - name: privacy
+
 - kind: BookLibraryModel
   properties:
   - name: active
