added general activity analyses page

--- a/index.yaml
+++ b/index.yaml
@@ -30,6 +30,12 @@ indexes:
   - name: when
     direction: desc
 
+- kind: ActivityModel
+  properties:
+  - name: userid
+  - name: when
+    direction: desc
+
 - kind: BlogPostModel
   properties:
   - name: userid
